TEST_PROGRAMS/INVALID_TYPECHECK/bad_assign_type2.go
package main;

func main() {
    var x float64 = 5

    //this assignment is not allowed
    var y int = x
    print(y)
}
